--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40"
   }
 }
